--- a/index.html
+++ b/index.html
@@ -9,5 +9,33 @@
 </head>
 <body>
 
+  <h1>Dinosaurs</h1>
+  <ol class="list-group">
+    <li class="list-group-item">
+      <a href="#">
+        <i class="icon i-32 i-ankylosaurus"></i>
+        <span class="icon-label">Ankylosaurus</span>
+      </a>
+    </li>
+    <li class="list-group-item">
+      <a href="#">
+        <i class="icon i-32 i-hadrosaur"></i>
+        <span class="icon-label">Hadrosaur</span>
+      </a>
+    </li>
+    <li class="list-group-item">
+      <a href="#">
+        <i class="icon i-32 i-stegosaurus"></i>
+        <span class="icon-label">Stegosaurus</span>
+      </a>
+    </li>
+    <li class="list-group-item">
+      <a href="#">
+        <i class="icon i-32 i-triceratops"></i>
+        <span class="icon-label">Triceratops</span>
+      </a>
+    </li>
+  </ol>
+
 </body>
 </html>
