Changed icon size and link colouring

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
   <h1>Dinosaurs</h1>
   <ol class="list-group">
     <li class="list-group-item">
-      <a href="#">
-        <i class="icon i-32 i-ankylosaurus"></i>
+      <a href="#" class="icon-link">
+        <i class="icon i-64 i-ankylosaurus"></i>
         <span class="icon-label">Ankylosaurus</span>
       </a>
     </li>
     <li class="list-group-item">
-      <a href="#">
-        <i class="icon i-32 i-hadrosaur"></i>
+      <a href="#" class="icon-link">
+        <i class="icon i-64 i-hadrosaur"></i>
         <span class="icon-label">Hadrosaur</span>
       </a>
     </li>
     <li class="list-group-item">
-      <a href="#">
-        <i class="icon i-32 i-stegosaurus"></i>
+      <a href="#" class="icon-link">
+        <i class="icon i-64 i-stegosaurus"></i>
         <span class="icon-label">Stegosaurus</span>
       </a>
     </li>
     <li class="list-group-item">
-      <a href="#">
-        <i class="icon i-32 i-triceratops"></i>
+      <a href="#" class="icon-link">
+        <i class="icon i-64 i-triceratops"></i>
         <span class="icon-label">Triceratops</span>
       </a>
     </li>
