--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
   <h1>Dinosaurs</h1>
   <ol class="list-group">
     <li class="list-group-item">
-      <a href="#" class="icon-link">
+      <img class="icon-link">
         <i class="icon i-64 i-ankylosaurus"></i>
         <span class="icon-label">Ankylosaurus</span>
-      </a>
+      </img>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
+      <img class="icon-link">
         <i class="icon i-64 i-hadrosaur"></i>
         <span class="icon-label">Hadrosaur</span>
-      </a>
+      </img>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
+      <img class="icon-link">
         <i class="icon i-64 i-stegosaurus"></i>
         <span class="icon-label">Stegosaurus</span>
-      </a>
+      </img>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
+      <img class="icon-link">
         <i class="icon i-64 i-triceratops"></i>
         <span class="icon-label">Triceratops</span>
-      </a>
+      </img>
     </li>
   </ol>
 
