--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
   <ol class="list-group">
     <li class="list-group-item">
       <a href="#" class="icon-link">
-        <i class="icon i-64 i-ankylosaurus"></i>
+        <i class="icon i-64"><img src="images/ankylosaurus.svg" alt=""></i>
         <span class="icon-label">Ankylosaurus</span>
       </a>
     </li>
     <li class="list-group-item">
       <a href="#" class="icon-link">
-        <i class="icon i-64 i-hadrosaur"></i>
+        <i class="icon i-64"><img src="images/hadrosaur.svg" alt=""></i>
         <span class="icon-label">Hadrosaur</span>
       </a>
     </li>
     <li class="list-group-item">
       <a href="#" class="icon-link">
-        <i class="icon i-64 i-stegosaurus"></i>
+        <i class="icon i-64"><img src="images/stegosaurus.svg" alt=""></i>
         <span class="icon-label">Stegosaurus</span>
       </a>
     </li>
     <li class="list-group-item">
       <a href="#" class="icon-link">
-        <i class="icon i-64 i-triceratops"></i>
+        <i class="icon i-64"><img src="images/triceratops.svg" alt=""></i>
         <span class="icon-label">Triceratops</span>
       </a>
     </li>
